# Case_Study

./: .gitignore  README.md
algo/algo1-ClosestPoints/: ClosestPoints.sln  ClosestPoints.vcxproj  ReamMe.md  Source.cpp
algo/algo1-ClosestPoints/Tests/: Test4_Answ.txt  Test6.txt  UnitTest.cpp  UnitTest.vcxproj
algo/algo10-MinInRotatedSortArray/: Source.cpp
algo/algo11-SearchInRotatedArray/: Source.cpp
algo/algo2-RabinCarpMatcher/: RabinCarpMatcher.sln  RabinCarpMatcher.vcxproj  ReadMe.md  Source.cpp
algo/algo3-ToBin/: CMakeLists.txt  Source.cpp
algo/algo4-RemoveDups/: CMakeLists.txt  Source.cpp
algo/algo5-ReverseList/: Source.cpp
algo/algo6-SingleNumber/: Source.cpp
algo/algo7-SlidingWindowMax/: Source.cpp
algo/algo8-SameTree/: Source.cpp
algo/algo9-BinSearch/: Source.cpp
assembly/10-hex-sum/: SummInHex.asm
assembly/crc32/: CMakeLists.txt  Source.cpp  asm.asm
assembly/mbr/: protected_mbr.asm
assembly/protected_mode/: prm.asm
assembly/tutorial1-custom-atomic/: CustomAtomic.cpp  CustomAtomic.sln  CustomAtomic.vcxproj  README.md  atomics.h  atomics.s
assembly/tutorial10-calling_C++_from_ASM/: CMakeLists.txt  Source.cpp  asm.asm
assembly/tutorial2-jump/: Jump.h  JumpTest.cpp  JumpTest.sln  JumpTest.vcxproj  Jump_.s  README.md
assembly/tutorial3-arithmetic/: CMakeLists.txt  Source.cpp  asm.asm
assembly/tutorial4-lable/: CMakeLists.txt  Source.cpp  asm.asm
assembly/tutorial5-bool-operation/: CMakeLists.txt  Source.cpp  asm.asm
assembly/tutorial6-zero-array/: CMakeLists.txt  Source.cpp  asm.asm
assembly/tutorial7-mul-div/: CMakeLists.txt  Source.cpp  asm.asm
assembly/tutorial8-stack-intro/: CMakeLists.txt  Source.cpp  asm.asm
assembly/tutorial9-string/: CMakeLists.txt  Source.cpp  asm.asm
c++/SFINAE/: CMakeLists.txt  Source.cpp
c++/calc_duration/: CMakeLists.txt  Source.cpp  utils.h
c++/const/: CMakeLists.txt  Source.cpp
c++/coro-sync-generator/: CMakeLists.txt  DebugLog.h  Main.cpp  MyCoroGen.h
c++/decltype/: CMakeLists.txt  Source.cpp
c++/dynamic_lib/: CMakeLists.txt
c++/dynamic_lib/lib/: CMakeLists.txt  mylib.cpp
c++/future/: CMakeLists.txt  Source.cpp
c++/future-impl/: CMakeLists.txt  Source.cpp  future.h  future.ipp  promise.h  shared_state.h
c++/join_string/: main.cpp
c++/output double/: source.cpp
c++/overloading_operators/: CMakeLists.txt  Matrix.h  Operators.h  Source.cpp  Task.md
c++/pimpl/: CMakeLists.txt  Source.cpp  Source.h
c++/plugin_sys/: CMakeLists.txt  main.cpp
c++/plugin_sys/lib/: mylib.h
c++/print_ip/: print_ip.cpp
c++/quiz/: 11.cpp  13.cpp  14.cpp  15.cpp  17.cpp  18.cpp  19-volatile.cpp  20.cpp  21.cpp  22.cpp  23.cpp  3.cpp  6-ctor.cpp  8.cpp  9.cpp
c++/segment_descriptor_builder/: CMakeLists.txt  Source.cpp
c++/socket_lib/: CMakeLists.txt
c++/socket_lib/include/: ServerSocket.h
c++/socket_lib/source/: ServerSocket.cpp
c++/sqlite3/: CMakeLists.txt  main.cpp
c++/static_lib/: CMakeLists.txt  main.cpp
c++/static_lib/lib/: CMakeLists.txt  mylib.h
c++/templates/: Source.cpp  TypenameTest.h
c++/thread_pool/: CMakeLists.txt  Source.cpp  blocking_priority_queue.h  blocking_queue.h  executor.h  ithread_pool.h  priority.cpp  priority.h  thread_pool.cpp  thread_pool.h
c++/timeout_executor/: CMakeLists.txt  TimeoutExecutor.cpp  TimeoutExecutor.h  main.cpp
c++/user_define_convs/: CMakeLists.txt  Source.cpp
c++/vtable/: CMakeLists.txt  call_virtual_in_ctor.cpp  main.cpp
linux/hello_world_lib_dyn/: README.md  hello.c  main.c
linux/hello_world_lib_static/: README.md  hello.h  main.c
linux/how_to/: README.md
windows/com/: test-doc.docx
windows/com-lib-register/: exporter.cs  interop-tool.cs  register.cs  util.cs
windows/com/COM/TEST_COM/: MyOfficeX.csproj  TEST_COM.sln
windows/com/COM/TEST_COM/COM/: IMyOfficeX.cs.cs  MyOfficeX.Designer.cs  MyOfficeX.cs
windows/com/COM/TEST_COM/Properties/: AssemblyInfo.cs
windows/com/CppComClient/: ApiServerApplication.cpp  ApiServerApplication.h  ApiServerEvents.cpp  ApiServerEvents.h
windows/com/MFC - TEST/MFCApp_TEST_COM/: ChildFrm.cpp  ChildFrm.h  MFCAppTESTCOM.rc  MFCApp_TEST_COM.cpp  MFCApp_TEST_COM.h  MFCApp_TEST_COM.sln  MFCApp_TEST_COM.vcxproj  MFCApp_TEST_COM.vcxproj.filters  MFCApp_TEST_COMDoc.cpp  MFCApp_TEST_COMDoc.h  MFCApp_TEST_COMView.cpp  MFCApp_TEST_COMView.h  MainFrm.cpp  MainFrm.h  MyRTFChildFrm.cpp  MyRTFChildFrm.h  Resource.h  TestData.h  calendarbar.cpp  framework.h  pch.h
windows/com/MFC - TEST/MFCApp_TEST_COM/res/: MFCAppTESTCOM.rc2
windows/hooks/: CMakeLists.txt  HookLoader.cpp
windows/hooks/lib/: CMakeLists.txt  HookLib.cpp  HookLib.h
windows/rpc/ClientApp/: ClientApp.vcxproj  ClientApp.vcxproj.filters  MainClient.cpp  hello_c.c  hello_s.c
windows/rpc/ServerApp/: MainServer.cpp  ServerApp.vcxproj  ServerApp.vcxproj.filters
windows/rpc/StandaloneApp/: Main.cpp  StandaloneApp.sln  StandaloneApp.vcxproj  StandaloneApp.vcxproj.filters  hello.h  hello.idl  hello_c.c  hello_s.c  hellop.c
